# plarza

./: .example.env  .gitignore  README.md  app.py  docker-compose.yml  docker-compose2.yml  docker.sh  instagram.py  main.py  reddit.py  twitter.py  youtube.py
backend/: Cargo.toml
backend/src/: instagram.rs  main.rs  twitter.rs  youtube.rs
client/: Dockerfile  README.md  package-lock.json  package.json
client/src/: app.html
client/src/routes/: +error.svelte  +layout.svelte  +page.svelte  Footer.svelte  Navbar.svelte
client/src/routes/[username]/: +page.svelte
client/src/routes/feed/: +page.server.ts
client/src/routes/login/: +page.svelte
client/src/routes/signup/: +page.svelte
crawler/: .gitignore  Cargo.toml  Dockerfile  README.md  times.txt
crawler/src/: main.rs
database/: README.md  feed.sql  init.sql  post.sql  user.sql
db/: 000012.sst  000021.sst  IDENTITY  LOG  LOG.old.1679991486312835  LOG.old.1679991509726497  LOG.old.1679992515365956  LOG.old.1679995820430661  MANIFEST-000023
server/: Cargo.toml  Dockerfile  README.md  app.py  data.csv  db.py  instagram.py  main.py  reddit.py  requirements.txt  twitter.py  youtube.py
server/src/: lib.rs  main.rs
server/src/models/: post.rs  user.rs
server/src/routes/: login.rs  mod.rs  posts.rs  posts_create.rs  signup.rs  user.rs
server/tests/: common.rs  login.rs  posts.rs  posts_create.rs  signup.rs  user.rs
src/: plarza.drawio
