[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde_json = "1.0.96"
select = "0.6.0"
serde-xml-rs = "0.6.0"
scraper = "0.16.0"
chrono = "0.4.24"