[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-test = "0.1.2"
actix-web = "4.4.0"
argon2 = "0.5.2"
base64 = "0.21.5"
chrono = "0.4.31"
dotenv_codegen = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }

[dev-dependencies]
actix-rt = "2.9.0"
